Linted HTML and added spacing to CSS

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,23 +5,37 @@
     <link rel="stylesheet" .a href="./css/aboutme.css" />
   </head>
   <body>
-    <body>
-        <header>
-          <img class="title" src="./image/logo2.png">
-          <img class="butterfly" src="./image/bfly.png" />
-        </header>
-        <div class="container">
-            <div class="bio">
-                <img class="avatar" src="./image/slowbro.png">
-                <div class="aboutme">
-                    <h1>Samantha Noble</h1>
-                    <h2>Front End Web Developer</h2>
-                    <h3>Udacity</h3>
-                    <p>Hi there! I am a student of web development, this blog was the first project for my Udacity class. Join me as I learn to become a code warrior! Outside of the classroom I drink too much tea and I enjoy a lot of things: from playing retro video games and D&D to creative writing and sketching in ProCreate!</p>
-                </div>
-            </div>
-        <div class="footer"><h4><h4><a href=home.html> Home </a>|<a href="https://www.facebook.com" > Facebook </a>| <a href=https://twitter.com> Twitter </a>|<a href="https://www.linkedin.com/in/samantha-ann-noble/"> LinkedIn </a><h4></div>
-
+    <header>
+      <img class="title" src="./image/logo2.png" />
+      <img class="butterfly" src="./image/bfly.png" />
+    </header>
+    <div class="container">
+      <div class="bio">
+        <img class="avatar" src="./image/slowbro.png" />
+        <div class="aboutme">
+          <h1>Samantha Noble</h1>
+          <h2>Front End Web Developer</h2>
+          <h3>Udacity</h3>
+          <p>
+            Hi there! I am a student of web development, this blog was the first
+            project for my Udacity class. Join me as I learn to become a code
+            warrior! Outside of the classroom I drink too much tea and I enjoy a
+            lot of things: from playing retro video games and D&D to creative
+            writing and sketching in ProCreate!
+          </p>
         </div>
+      </div>
+      <div class="footer">
+        <h4>
+          <a href="home.html"> Home </a>|<a href="https://www.facebook.com">
+            Facebook </a
+          >| <a href="https://twitter.com"> Twitter </a>|<a
+            href="https://www.linkedin.com/in/samantha-ann-noble/"
+          >
+            LinkedIn
+          </a>
+        </h4>
+      </div>
+    </div>
   </body>
 </html>
