--- a/home.html
+++ b/home.html
@@ -2,28 +2,42 @@
 <html>
   <head>
     <title>Samantha's Blog</title>
-    <link rel="stylesheet" .a href="./css/main.css" />
-    <body>
-      <header>
-        <img class="title" src="./image/logo2.png">
-        <img class="butterfly" src="./image/bfly.png" />
-      </header>
-      <div class="container">
-        <div class="sider">
-          <h2>Navigation</h2>
-          <ul>
-            <li><a href=journey.html>Latest Post</a></li>
-            <li><a href=aboutme.html>About The Author</a></li>
-          </ul>
-        </div>
-        <div class="main"><h1><a href=journey.html>A Journey of A Thousand Miles...</a></h1>
-        <p>April 21. 2022</p>
-        <p>by <a href=aboutme.html>Samantha Noble</a></p>
-        <p>A small post sharing my first steps in learning about web development, as well as my expereince learning CSS and HTML. This is the single step that begins my quest to become a Front End Web Developer, and after that a full blown Software Engineer.</p>
-        </div>
-        <div class="footer"><h4><a href=home.html>Home</a> | <a href="https://www.facebook.com" >Facebook </a> | <a href=https://twitter.com>Twitter</a> | <a href="https://www.linkedin.com/in/samantha-ann-noble/">LinkedIn</a><h4></div>
-        </div>
-      </div>
-    </body>
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
+  <body>
+    <header>
+      <img class="title" src="./image/logo2.png" />
+      <img class="butterfly" src="./image/bfly.png" />
+    </header>
+    <div class="container">
+      <div class="sider">
+        <h2>Navigation</h2>
+        <ul>
+          <li><a href="journey.html">Latest Post</a></li>
+          <li><a href="aboutme.html">About The Author</a></li>
+        </ul>
+      </div>
+      <div class="main">
+        <h1>
+          <a href="journey.html">A Journey of A Thousand Miles...</a>
+        </h1>
+        <p>April 21. 2022</p>
+        <p>by <a href="aboutme.html">Samantha Noble</a></p>
+        <p>
+          A small post sharing my first steps in learning about web development,
+          as well as my expereince learning CSS and HTML. This is the single
+          step that begins my quest to become a Front End Web Developer, and
+          after that a full blown Software Engineer.
+        </p>
+      </div>
+      <div class="footer">
+        <h4>
+          <a href="home.html">Home</a> |
+          <a href="https://www.facebook.com">Facebook </a> |
+          <a href="https://twitter.com">Twitter</a> |
+          <a href="https://www.linkedin.com/in/samantha-ann-noble/">LinkedIn</a>
+        </h4>
+      </div>
+    </div>
+  </body>
 </html>
